--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # Domain
 # This would be set to the production domain with an env var on deployment
 # used by Traefik to transmit traffic and aqcuire TLS certificates
-DOMAIN=localhost
+DOMAIN=flappeh.my.id
 # To test the local Traefik config
 # DOMAIN=localhost.tiangolo.com
 
@@ -13,30 +13,30 @@ FRONTEND_HOST=http://localhost:5173
 # Environment: local, staging, production
 ENVIRONMENT=local
 
-PROJECT_NAME="Full Stack FastAPI Project"
-STACK_NAME=full-stack-fastapi-project
+PROJECT_NAME="Agnostic Virtualization Manager"
+STACK_NAME=virt-manager
 
 # Backend
 BACKEND_CORS_ORIGINS="http://localhost,http://localhost:5173,https://localhost,https://localhost:5173,http://localhost.tiangolo.com"
-SECRET_KEY=changethis
-FIRST_SUPERUSER=admin@example.com
-FIRST_SUPERUSER_PASSWORD=changethis
+SECRET_KEY=9cd4gprQTYeK7gcenmJjD_4cC6YWyM_hRQ5i_d78Tqs
+FIRST_SUPERUSER=admin@flappeh.my.id
+FIRST_SUPERUSER_PASSWORD=PassAccount123!
 
 # Emails
-SMTP_HOST=
-SMTP_USER=
-SMTP_PASSWORD=
-EMAILS_FROM_EMAIL=info@example.com
+SMTP_HOST=smtp.hostinger.com
+SMTP_USER=admin@flappeh.my.id
+SMTP_PASSWORD=PassFlLogGo123!
+EMAILS_FROM_EMAIL=admin@flappeh.my.id
 SMTP_TLS=True
 SMTP_SSL=False
 SMTP_PORT=587
 
 # Postgres
-POSTGRES_SERVER=localhost
+POSTGRES_SERVER=192.168.18.181
 POSTGRES_PORT=5432
-POSTGRES_DB=app
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=changethis
+POSTGRES_DB=virtmanager
+POSTGRES_USER=virtmanager
+POSTGRES_PASSWORD=PassVirtLo412
 
 SENTRY_DSN=
 
