--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -2,7 +2,7 @@
 
 [alembic]
 # path to migration scripts
-script_location = app/alembic
+script_location = app/core/alembic
 
 # template used to generate migration files
 # file_template = %%(rev)s_%%(slug)s
@@ -11,7 +11,7 @@ script_location = app/alembic
 # within the migration file as well as the filename.
 # string value is passed to dateutil.tz.gettz()
 # leave blank for localtime
-# timezone =
+timezone = Asia/Jakarta
 
 # max length of characters to apply to the
 # "slug" field
@@ -33,7 +33,7 @@ script_location = app/alembic
 
 # the output encoding used when revision files
 # are written from script.py.mako
-# output_encoding = utf-8
+output_encoding = utf-8
 
 # Logging configuration
 [loggers]
